# redisctl

./: .mcp.json.example  AGENTS.md  Cargo.toml  DEMO-MULTI-CLUSTER.md  Dockerfile  README.md  RELEASE.md  deny.toml  docker-compose.enterprise-demo.yml  docker-compose.multi-cluster.yml  release-plz.toml
.github/workflows/: cargo-deny.yml  ci.yml  docker.yml  docs.yml  release.yml  security.yml
crates/redisctl/: CHANGELOG.md  Cargo.toml
crates/redisctl-config/src/: config.rs
crates/redisctl-core/: CHANGELOG.md  Cargo.toml
crates/redisctl-core/src/: approach_a.rs  approach_b.rs  approach_c.rs  error.rs  lib.rs  progress.rs
crates/redisctl-core/src/cloud/: mod.rs  params.rs  workflows.rs
crates/redisctl-core/src/config/: config.rs  credential.rs  error.rs  mod.rs  resilience.rs
crates/redisctl-core/src/enterprise/: mod.rs  progress.rs  workflows.rs
crates/redisctl-core/tests/: config_edge_cases.rs
crates/redisctl-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/redisctl-mcp/skills/compare-approaches/: SKILL.md
crates/redisctl-mcp/skills/data-explorer/: SKILL.md
crates/redisctl-mcp/skills/data-modeling-advisor/: SKILL.md
crates/redisctl-mcp/skills/index-ab-test/: SKILL.md
crates/redisctl-mcp/skills/index-advisor/: SKILL.md
crates/redisctl-mcp/skills/index-audit/: SKILL.md
crates/redisctl-mcp/skills/index-migration/: SKILL.md
crates/redisctl-mcp/skills/query-tuning/: SKILL.md
crates/redisctl-mcp/src/: audit.rs  cloud_tools.rs  error.rs  lib.rs  main.rs  policy.rs  presets.rs  prompts.rs  resources.rs  serde_helpers.rs  state.rs
crates/redisctl-mcp/src/tools/: cloud.rs  enterprise.rs  macros.rs  mod.rs  profile.rs  redis.rs
crates/redisctl-mcp/src/tools/cloud/: account.rs  fixed.rs  mod.rs  networking.rs  raw.rs  subscriptions.rs
crates/redisctl-mcp/src/tools/enterprise/: cluster.rs  databases.rs  mod.rs  observability.rs  proxy.rs  raw.rs  rbac.rs  services.rs
crates/redisctl-mcp/src/tools/redis/: aliases.rs  bulk.rs  connection.rs  diagnostics.rs  json.rs  keys.rs  mod.rs  raw.rs  search.rs  server.rs  structures.rs
crates/redisctl-mcp/tests/: cloud_tools.rs  enterprise_tools.rs  redis_tools.rs
crates/redisctl/src/: connection.rs  error.rs  lib.rs  main.rs  output.rs  resilience.rs
crates/redisctl/src/cli/: cloud.rs  enterprise.rs  mod.rs
crates/redisctl/src/commands/: api.rs  curl.rs  db.rs  files_key.rs  mod.rs  profile.rs
crates/redisctl/src/commands/cloud/: acl_impl.rs  async_utils.rs  cloud_account_impl.rs  database.rs  database_impl.rs  fixed_database.rs  subscription.rs  subscription_impl.rs  task.rs  utils.rs
crates/redisctl/src/commands/cloud/connectivity/: private_link.rs  tgw.rs  vpc_peering.rs
crates/redisctl/src/commands/enterprise/: alerts.rs  cluster.rs  cluster_impl.rs  database.rs  database_impl.rs  license.rs  license_workflow.rs  module_impl.rs  node_impl.rs  proxy.rs  rbac_impl.rs  shard.rs  status.rs  utils.rs
crates/redisctl/src/commands/enterprise/support_package/: upload.rs
crates/redisctl/src/workflows/enterprise/: init_cluster.rs
crates/redisctl/tests/: cli_basic_tests.rs  cli_integration_mocked_tests.rs  cloud_output_test.rs  docker_wrapper_tests.rs
docker/: Dockerfile  docker-compose.enterprise-demo.yml  docker-compose.mcp-demo.yml  docker-compose.multi-cluster.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/cloud/: index.md  workflows.md
docs/docs/cloud/commands/: access-control.md  cost-report.md  databases.md  fixed-databases.md  fixed-subscriptions.md  index.md  networking.md  subscriptions.md  tasks.md
docs/docs/common/: async-operations.md  index.md  jmespath.md  output-formats.md  profiles.md  raw-api.md  troubleshooting.md
docs/docs/cookbook/: index.md
docs/docs/cookbook/cloud/: acls.md  backup-restore.md  cost-reports.md  first-database.md  vpc-peering.md
docs/docs/cookbook/enterprise/: cluster-health.md  create-database.md  node-management.md  support-package.md
docs/docs/developer/: architecture.md  contributing.md  index.md  libraries.md  python.md
docs/docs/enterprise/: index.md  workflows.md
docs/docs/enterprise/commands/: access-control.md  active-active.md  cluster.md  databases.md  index.md  monitoring.md  nodes.md
docs/docs/enterprise/operations/: debuginfo.md  index.md  support-package.md
docs/docs/getting-started/: authentication.md  docker.md  index.md  installation.md  quickstart.md
docs/docs/integrations/: index.md  mcp.md
docs/docs/mcp/: advanced-usage.md  architecture.md  audit-logging.md  cloud-quickstart.md  configuration.md  database-quickstart.md  enterprise-quickstart.md  getting-started.md  index.md  tools-reference.md  workflows.md
docs/docs/presentation/: index.md  slides.html
docs/docs/reference/: config-file.md  environment-variables.md  index.md  rladmin.md  security.md  shell-completions.md
docs/docs/stylesheets/: extra.css
mkdocs-site/docs/: index.md
mkdocs-site/docs/developer/: architecture.md  contributing.md  index.md  libraries.md  python.md
presentations/mcp-deep-dive/: index.html
skills/redisctl-cloud-management/: SKILL.md
skills/redisctl-database-connect/: SKILL.md
skills/redisctl-enterprise-admin/: SKILL.md
skills/redisctl-enterprise-ops/: SKILL.md
skills/redisctl-networking/: SKILL.md
skills/redisctl-setup/: SKILL.md
skills/redisctl-workflows/: SKILL.md
