[package]
name = "redisctl-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Redis CLI tools - config, workflows, and shared logic"

[dependencies]
# API clients
redis-cloud = { workspace = true }
redis-enterprise = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Config support
directories = { workspace = true }
shellexpand = { workspace = true }
clap = { workspace = true }

# Optional: Secure credential storage
keyring = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
secure-storage = ["dep:keyring"]
