[package]
name = "redisctl-mcp"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Redis Cloud and Enterprise"
readme = "../../README.md"
keywords = ["redis", "mcp", "ai", "cloud", "enterprise"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# MCP SDK
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
schemars = "0.8"

# Internal crates
redisctl-config = { version = "0.2.2", path = "../redisctl-config" }
redis-cloud = { workspace = true }
redis-enterprise = { workspace = true }

# Redis client for direct database connections
redis = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
