[package]
name = "redisctl-mcp"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Redis Cloud and Enterprise"
readme = "README.md"
keywords = ["redis", "mcp", "ai", "cloud", "enterprise"]
categories = ["api-bindings", "development-tools"]

[[bin]]
name = "redisctl-mcp"
path = "src/main.rs"

[dependencies]
# MCP framework
tower-mcp = { version = "0.3.4", features = ["http", "oauth"] }
schemars = "1.2"

# Internal crates
redisctl-config = { version = "0.2.2", path = "../redisctl-config" }

# External API clients
redis-cloud = { workspace = true }
redis-enterprise = { workspace = true }

# Redis client for direct database connections
redis = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP/OAuth
tower = { version = "0.5", features = ["timeout", "limit"] }

[features]
default = ["http"]
http = []
test-support = []

[dev-dependencies]
tokio = { workspace = true }
redis-cloud = { version = "0.9.2", features = ["test-support"] }
redis-enterprise = { version = "0.8.2", features = ["test-support"] }
wiremock = { workspace = true }
serde_json = { workspace = true }
