[package]
name = "redisctl-mcp"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Redis Cloud and Enterprise"
readme = "README.md"
keywords = ["redis", "mcp", "ai", "cloud", "enterprise"]
categories = ["api-bindings", "development-tools"]

[[bin]]
name = "redisctl-mcp"
path = "src/main.rs"

[dependencies]
# MCP framework
tower-mcp = { version = "0.7.0", features = ["http", "oauth"] }
schemars = "1.2"

# Internal crates
redisctl-core = { version = "0.1.0", path = "../redisctl-core" }

# External API clients (optional, gated by features)
redis-cloud = { workspace = true, optional = true }
redis-enterprise = { workspace = true, optional = true }

# Redis client for direct database connections (optional, gated by features)
redis = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP/OAuth
tower = { workspace = true }

[features]
default = ["http", "cloud", "enterprise", "database"]
http = []
cloud = ["dep:redis-cloud"]
enterprise = ["dep:redis-enterprise"]
database = ["dep:redis", "dep:urlencoding"]
test-support = []

[dev-dependencies]
tokio = { workspace = true }
redis-cloud = { workspace = true, features = ["test-support"] }
redis-enterprise = { workspace = true, features = ["test-support"] }
wiremock = { workspace = true }
serde_json = { workspace = true }
