[package]
name = "redisctl"
version = "0.7.7"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified CLI for Redis Cloud and Enterprise"
keywords = ["redis", "cli", "cloud", "enterprise", "database"]
categories = ["command-line-utilities", "api-bindings"]
readme = "../../README.md"

[[bin]]
name = "redisctl"
path = "src/main.rs"



[dependencies]
redisctl-config = { version = "0.2.2", path = "../redisctl-config" }
redis-cloud = { workspace = true, features = ["tower-integration"] }
redis-enterprise = { workspace = true, features = ["tower-integration"] }
files-sdk = { workspace = true, optional = true }

# CLI dependencies
clap = { workspace = true }
clap_complete = "4.5"
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rpassword = { workspace = true }
urlencoding = "2.1"
dialoguer = "0.11"
colored = "2.1"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4"
indicatif = "0.18"
unicode-segmentation = "1.12"
tar = { workspace = true }
flate2 = { workspace = true }

# Shared utility dependencies
thiserror = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = { workspace = true }
jmespath = { workspace = true }
jmespath_extensions = { version = "0.8", features = ["full"] }
config = { workspace = true }

# Keyring for Files.com API key storage (separate from profile credentials)
keyring = { version = "3.6", optional = true, features = ["apple-native", "windows-native", "linux-native"] }

# Tower and resilience patterns
tower = { version = "0.5", features = ["util", "timeout", "buffer", "ready-cache"] }
tower-resilience = { version = "0.1", features = ["circuitbreaker", "retry", "ratelimiter"] }
regex = "1.12.2"
zip = "6.0.0"

[target.'cfg(unix)'.dependencies]
pager = "0.16"

# Conditional dependencies for feature-gated binaries
[features]
default = ["full", "secure-storage"]
full = ["cloud", "enterprise", "upload"]
cloud = []
enterprise = []
upload = ["dep:files-sdk"]
# Note: secure-storage may not work on musl targets due to keyring native dependencies
# Build with --no-default-features --features full for musl
secure-storage = ["redisctl-config/secure-storage", "dep:keyring"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"
serial_test = "3.1"
wiremock = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
# Using git until testing feature is released
docker-wrapper = { git = "https://github.com/joshrotenberg/docker-wrapper", features = ["testing", "template-redis"] }

[[bench]]
name = "api_performance"
harness = false
